--- a/internal/dictionary/Makefile
+++ b/internal/dictionary/Makefile
@@ -4,7 +4,7 @@ help:
 	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 test:      ## Live reload tests
-	@reflex -g '*.go' go test -v
+	@reflex -g '*.go' go test
 
 cov:       ## Runs code coverage
 	go test -a -coverprofile=coverage.cov .
