--- a/k8s/hangman/dp.yml
+++ b/k8s/hangman/dp.yml
@@ -1,30 +1,28 @@
 kind:       Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: game-v1
+  name: hangman-v1
   labels:
-    group: hangman
-    app:   game
+    app:   hangman
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        group:   hangman
-        app:     game
+        app:     hangman
         version: v1
     spec:
       imagePullSecrets:
       - name: quay-secret
       containers:
       - name:            game
-        image:           quay.io/derailed/hangman:1.1
+        image:           quay.io/derailed/hangman:1.2
         imagePullPolicy: IfNotPresent
-        args:            ["--url", "http://dictionary:9094"]
+        args:            ["--dicUrl", "http://dictionary:9094", "--gameUrl", "http://game:9095"]
         resources:
           limits:
             cpu:    1.0m
             memory: 5Mi
         ports:
         - name:          http
-          containerPort: 9095
+          containerPort: 9096
