--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -16,3 +16,8 @@ spec:
         backend:
           serviceName: game
           servicePort: 9095
+      - path: /hangman/v1/.*
+        backend:
+          serviceName: hangman
+          servicePort: 9096
+
