--- a/k8s/istio/rules/header.yml
+++ b/k8s/istio/rules/header.yml
@@ -1,15 +1,14 @@
 apiVersion: config.istio.io/v1alpha2
 kind:       RouteRule
 metadata:
-  name:      header
-  namespace: default
+  name: header
 spec:
   precedence: 2
   destination:
     name: dictionary
   match:
     source:
-      name: game
+      name: hangman
     request:
       headers:
         cookie:
