--- a/k8s/istio/rules/fault.yml
+++ b/k8s/istio/rules/fault.yml
@@ -8,7 +8,7 @@ spec:
     name: dictionary
   match:
     source:
-      name: game
+      name: hangman
   httpFault:
     abort:
       percent: 50
