--- a/k8s/istio/rules/rate-handler.yml
+++ b/k8s/istio/rules/rate-handler.yml
@@ -10,7 +10,7 @@ spec:
     overrides:
     - dimensions:
         destination: dictionary
-        source: game
+        source: hangman
         sourceVersion: v1
       maxAmount: 1
       validDuration: 1s
