--- a/k8s/dictionary/v1/dp.yml
+++ b/k8s/dictionary/v1/dp.yml
@@ -20,9 +20,13 @@ spec:
         imagePullPolicy: IfNotPresent
         args:            ["--dic", "standard"]
         resources:
+        resources:
+          requests:
+            cpu:    250m
+            memory: 32Mi
           limits:
-            cpu:    1.0m
-            memory: 5Mi
+            cpu:    500m
+            memory: 64Mi
         ports:
         - name:          http
           containerPort: 9094
