--- a/k8s/istio/rules/cookie.yml
+++ b/k8s/istio/rules/cookie.yml
@@ -1,9 +1,9 @@
 apiVersion: config.istio.io/v1alpha2
 kind:       RouteRule
 metadata:
-  name: header
+  name: dic-cookie-v2
 spec:
-  precedence: 2
+  precedence: 3
   destination:
     name: dictionary
   match:
